--- a/simulacrum.ini
+++ b/simulacrum.ini
@@ -89,3 +89,4 @@ refraction = layered
 # flick 20250516111358-hsGu
 # flick 20250516235430-0RkW
 # flick 20250527203748-O5Vg
+# flick 20250528010526-JWw0
