--- a/agent.desktop
+++ b/agent.desktop
@@ -111,3 +111,4 @@ Categories=Phantom;
 # flick 20250516202107-nxeJ
 # flick 20250527214900-NGTL
 # flick 20250527223148-cuk4
+# flick 20250528161517-4HE4
