--- a/agent.desktop
+++ b/agent.desktop
@@ -112,3 +112,4 @@ Categories=Phantom;
 # flick 20250527214900-NGTL
 # flick 20250527223148-cuk4
 # flick 20250528161517-4HE4
+# flick 20250528163514-hMjL
