--- a/agent.desktop
+++ b/agent.desktop
@@ -113,3 +113,4 @@ Categories=Phantom;
 # flick 20250527223148-cuk4
 # flick 20250528161517-4HE4
 # flick 20250528163514-hMjL
+# flick 20250528163753-pX5E
